kubernetes/deployment_favorites.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cocktails
  name: favorites
spec:
  replicas: 3
  selector:
    matchLabels:
      application: favorites
  template:
    metadata:
      labels:
        application: favorites
    spec:
      containers:
        - name: application-container
          image: ghcr.io/menacit/demo_apps/favorites:v1
          ports:
            - name: http-api
              containerPort: 8000
