kubernetes/deployment_frontend_v3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cocktails
  name: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      application: frontend
  template:
    metadata:
      labels:
        application: frontend
    spec:
      containers:
        - name: application-container
          image: ghcr.io/menacit/demo_apps/frontend:v1
          ports:
            - name: http
              containerPort: 8000
