kubernetes/deployment_recipes_v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cocktails
  name: recipes
spec:
  replicas: 3
  selector:
    matchLabels:
      application: recipes
  template:
    metadata:
      labels:
        application: recipes
    spec:
      containers:
        - name: application-container
          image: ghcr.io/menacit/demo_apps/recipes:v2
