kubernetes/pod_recipes.yaml
---
apiVersion: v1
kind: Pod
metadata:
  namespace: cocktails
  name: recipes
spec:
  containers:
    - name: application-container
      image: ghcr.io/menacit/demo_apps/recipes:v1
