kubernetes/service_authentication.yaml
---
apiVersion: v1
kind: Service                                        
metadata:
  namespace: shared
  name: authentication
spec:
  selector:
    application: authentication
  ports:
    - port: 80
      targetPort: http-server
