kubernetes/service_database-cluster.yaml
apiVersion: v1
kind: Service                                        
metadata:
  namespace: cocktails
  name: database-cluster
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    application: database
  ports:
    - port: 4001
      targetPort: client
