kubernetes/service_database.yaml
---
apiVersion: v1
kind: Service                                        
metadata:
  namespace: cocktails
  name: database
spec:
  selector:
    application: database
  ports:
    - port: 4001
      targetPort: client
