kubernetes/service_frontend.yaml
---
apiVersion: v1
kind: Service                                        
metadata:
  namespace: cocktails
  name: frontend
spec:                                                                                      
  selector:
    application: frontend
  ports:
    - port: 80
      targetPort: http-server
