kubernetes/service_recipes.yaml
---
apiVersion: v1
kind: Service                                        
metadata:
  namespace: cocktails
  name: recipes
spec:
  type: NodePort
  selector:
    application: recipes
  ports:
    - port: 80
      nodePort: 31337
      targetPort: http-api
