kubernetes/ingress_authentication.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: shared
  name: authentication
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /login
            pathType: Exact
            backend:
              service:
                name: authentication
                port:
                  name: http-server
