kubernetes/ingress_frontend.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: cocktails
  name: frontend
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: http-server
