kubernetes/networkpolicy_analytics.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: cocktails
  name: analytics
spec:
  podSelector:
    matchLabels:
      application: analytics
  ingress:
    - from:
        - podSelector:
            matchLabels:
              application: frontend
  egress:
    - to:
        - podSelector:
            matchLabels:
              application: recipes
