kubernetes/networkpolicy_authentication.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: shared
  name: authentication
spec:
  podSelector:
    matchLabels:
      application: authentication
  ingress:
    - from: []
  egress: []
