kubernetes/networkpolicy_database.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: cocktails
  name: database
spec:
  podSelector:
    matchLabels:
      application: database
  ingress:
    - ports:
        - port: client
        - port: peer
      from:
        - podSelector:
            matchLabels:
              application: database
    - ports:
        - port: client
      from:
        - podSelector:
            matchLabels:
              application: favorites
  egress:
    - ports:
        - port: client
        - port: peer
      to:
        - podSelector:
            matchLabels:
              application: database
