kubernetes/networkpolicy_frontend.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: cocktails
  name: frontend
spec:
  podSelector:
    matchLabels:
      application: frontend
  ingress:
    - ports:
        - port: http-server
      from: []
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: shared
          podSelector:
            matchLabels:
              application: authentication
        - podSelector:
            matchLabels:
              application: recipes
        - podSelector:
            matchLabels:
              application: analytics
        - podSelector:
            matchLabels:
              application: favorites
