kubernetes/networkpolicy_recipes.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: cocktails
  name: recipes
spec:
  podSelector:
    matchLabels:
      application: recipes
  ingress:
    - ports:
        - port: http-api
      from:
        - podSelector:
            matchLabels:
              application: frontend
  egress:
    - ports:
        - port: 80
        - port: 443
      to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 169.254.169.254/32
